<resources>
    <string name="app_name">Glimmer</string>
    <string name="wallpaper_description">A subtle, changing pattern of dots.</string>

    <string name="prefs_key_mode">mode</string>
    <string name="prefs_key_colour_change_period">particleLifetime</string>
    <string name="prefs_key_dot_size">dotSize</string>
    <string name="prefs_key_single_colour">singleColour</string>
    <string name="prefs_key_display_fps">showFps</string>

    <string name="prefs_size_small">Small</string>
    <string name="prefs_size_medium">Medium</string>
    <string name="prefs_size_large">Large</string>
    <string name="prefs_mode_change_colour">Change Colours</string>
    <string name="prefs_mode_reflect">Reflect Light</string>
    <string name="prefs_mode_single_colour">Single Colour</string>

    <string name="prefs_mode_title">Mode</string>
    <string name="prefs_mode_summary">Appearance and behaviour of dots</string>
    <string name="prefs_colour_change_period_title">Period</string>
    <string name="prefs_colour_change_period_summary">How long before dot colour changes</string>
    <string name="prefs_dot_size_title">Dot Size</string>
    <string name="prefs_dot_size_summary">How large the dot image is</string>
    <string name="prefs_static_colour_title">Dot Colour</string>
    <string name="prefs_static_colour_summary">What colour the dots should be</string>
    <string name="prefs_show_fps_title">Show FPS</string>
    <string name="prefs_show_fps_summary">Whether to display frames per second</string>
</resources>
